--- a/web/frontend/src/styles/global.css
+++ b/web/frontend/src/styles/global.css
@@ -64,10 +64,15 @@ body {
   font-size: 24px;
 }
 
-.crt-overlay {
-    background-image: url("/images/overlay-test.png");
+/* layout */
+#app {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
 }
 
+
+/* Typography */
 p, a, h1, h2, h3, h4
 {
   animation: crt-glow-text 0.1s steps(10) infinite;
@@ -81,6 +86,8 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+
 
 /* CRT Glow Effects */
 
