--- a/web/frontend/src/styles/global.css
+++ b/web/frontend/src/styles/global.css
@@ -55,6 +55,12 @@
   box-sizing: border-box;
 }
 
+html,
+body,
+#app {
+  height: 100%;
+}
+
 html {
   font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
@@ -68,7 +74,7 @@ body {
   color: var(--color-text);
   line-height: 1.6;
   font-family: "Orbitron";
-  font-size: 24px;
+  font-size: clamp(1rem, 2vw, 1.4rem);
 }
 
 /* layout */
@@ -77,6 +83,7 @@ main {
     grid-template-columns: 5rem auto 5rem;
     gap: 1rem;
     padding: 1rem;
+    min-height: 100%;
     grid-template-areas: 
     "   hero hero hero"
     "   mission mission mission"
@@ -97,13 +104,14 @@ main {
 
 @media screen and (width >= 72rem) {
   main {    
-    grid-template-columns: repeat(12, minmax(5rem, 10rem));
+    grid-template-columns: 1fr repeat(12, minmax(5rem, 10rem)) 1fr;
+    grid-template-rows: 10rem auto 15rem;
     gap: 1rem;
     padding: 1rem;
     grid-template-areas: 
-    "hero hero hero hero hero hero hero hero hero hero hero hero"
-    "decoration-1 decoration-1 mission mission mission mission mission mission mission mission . ."
-    ". . . . . . . . . footer footer footer";
+    ". hero hero hero hero hero hero hero hero hero hero hero hero ."
+    ". . . mission mission mission mission mission mission mission mission . .  ."
+    ". . . . . . . . . footer footer footer footer .";
   }
 }
 
@@ -114,16 +122,24 @@ main {
 
 .mission {
 grid-area: mission;
+padding: 1rem;
 }
 
 .plus-grid {
   grid-area: decoration-1;
   width: 100%;
   height: 100%;
-  background-color: url("images/screenparts/plus.svg");
+  background: url("/images/screenparts/plus.svg");
+  background-size: 10px;
 }
 
-footer {
+.grid-decoration {
+  grid-column: 2/4;
+  grid-row: 2/-1;
+  width: 100%;
+}
+
+.system-status {
   grid-area: footer;
 }
 
@@ -134,6 +150,10 @@ text-shadow:
       0 0 22px rgba(236, 230, 218, 0.25),
       -1px 0 6px rgba(255, 245, 230, 0.22),
       1px 0 6px rgba(220, 210, 195, 0.2);
+}
+
+p {
+  margin-top: 0;
 }
 
 a {
