--- a/web/frontend/src/styles/global.css
+++ b/web/frontend/src/styles/global.css
@@ -85,9 +85,9 @@ main {
     padding: 1rem;
     min-height: 100%;
     grid-template-areas: 
-    "   hero hero hero"
-    "   mission mission mission"
-    "   footer footer footer";
+    "hero hero hero"
+    "mission mission mission"
+    "footer footer footer";
 }
 
 @media screen and (width >= 30rem) {
@@ -97,21 +97,22 @@ main {
     padding: 1rem;
     grid-template-areas: 
     "hero hero hero hero hero hero"
-    "mission mission mission mission mission mission"
-    "footer footer footer footer footer footer";
+    "decoration-1 mission mission mission mission mission"
+    "decoration-1 footer footer footer footer footer";
   }
 }
 
 @media screen and (width >= 72rem) {
   main {    
     grid-template-columns: 1fr repeat(12, minmax(5rem, 10rem)) 1fr;
-    grid-template-rows: 10rem auto 15rem;
+    grid-template-rows: 10rem auto auto 10rem;
     gap: 1rem;
     padding: 1rem;
     grid-template-areas: 
     ". hero hero hero hero hero hero hero hero hero hero hero hero ."
-    ". . . mission mission mission mission mission mission mission mission . .  ."
-    ". . . . . . . . . footer footer footer footer .";
+    ". decoration-1 decoration-1 mission mission mission mission mission mission mission mission . .  ."
+    ". decoration-1 decoration-1 . . . . . . . . . . ."
+    ". decoration-1 decoration-1 . . . . . . footer footer footer footer .";
   }
 }
 
@@ -122,23 +123,30 @@ main {
 
 .mission {
 grid-area: mission;
-padding: 1rem;
-}
-
-.plus-grid {
-  grid-area: decoration-1;
-  width: 100%;
-  height: 100%;
-  background: url("/images/screenparts/plus.svg");
-  background-size: 10px;
 }
 
 .grid-decoration {
-  grid-column: 2/4;
-  grid-row: 2/-1;
+  grid-column: 1/-1;
+  grid-row: 1/-1;
   width: 100%;
+  opacity: 0.3;
 }
 
+@media screen and (width >= 30rem) {
+  .grid-decoration {
+    grid-area: decoration-1;
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+@media screen and (width >= 72rem) {
+  .grid-decoration {
+      grid-area: decoration-1;
+    width: 100%;
+    opacity: 1;
+  }
+}
 .system-status {
   grid-area: footer;
 }
